<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_now__playing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.youssefalaa.musicstructure.Now_Playing">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purpose_Now_playing"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        android:background="#FFECB3"
        android:id="@+id/Activites"
        android:layout_marginBottom="16dp" />
    <Button
        android:id="@+id/Struct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
    <Button
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        />
    <Button
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Albums"
        />
    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayListis"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        android:background="#FFECB3"
        android:layout_marginBottom="16dp" />


</LinearLayout>
