<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_lists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.youssefalaa.musicstructure.playLists">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purpose_play_Lists"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        android:background="#FFECB3"
        android:id="@+id/Activites"
        android:layout_marginBottom="16dp" />
    <Button
        android:id="@+id/Struct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
    <Button
        android:id="@+id/play_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NowPlaying"
        />
    <Button
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Albums"
        />
    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayListis"
        />

</LinearLayout>
